--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -10,15 +10,16 @@ h1 {
 }
 
 .menu {
+  padding-left: 10px;
   font-size: 4em;
   font-weight: 400;
   color: #4d64c4;
   width: 200px;
-  background: rgba(169, 169, 236, 0.2)
-
+  background: rgba(169, 169, 236, 0.2);
+  transition: 0.3s;
 }
 
 .menu:hover {
   color: #ff362e;
-  padding-left: 5px;
+  padding-left: 15px;
 }
