Added Home and About components. Reorganized stylesheets. Global font now imported in index.html. Created Styles dir /src/assets for global styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
-<h1>Lantern Dragon Works</h1>
 
-<div class ="main-menu">
-    <ul>
-      <li *ngFor="let option of menu" (click)="onSelect(option)">
-        <a><h1 class="menu">{{option}}</h1></a>
-      </li>
-    </ul>
-</div>
-
+<router-outlet></router-outlet>
