--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,3 @@
-@import "../styles.css";
-
 h1 {
   font-family: Merienda;
   font-size: 6em;
@@ -12,11 +10,18 @@ h1 {
 .menu {
   padding-left: 10px;
   font-size: 4em;
-  font-weight: 400;
   color: #4d64c4;
-  width: 200px;
+  width: 400px;
   background: rgba(169, 169, 236, 0.2);
-  transition: 0.3s;
+}
+
+.main-menu ul{
+  width: fit-content;
+  list-style-type: none;
+  white-space: nowrap;
+  float: left;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .menu:hover {
