--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -12,6 +12,7 @@ a {
 }
 
 .menu {
+  margin: 20px;
   padding-left: 10px;
   font-size: 4em;
   width: 400px;
@@ -27,7 +28,8 @@ a {
   text-overflow: ellipsis;
 }
 
-.menu:hover {
+.menu:hover, .active {
   color: #ff362e;
   padding-left: 15px;
+  margin-right: 15px;
 }
