--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,16 @@
-<h1>Lantern Dragon Works</h1>
+<div>
 
-<div class ="main-menu">
-  <nav>
-    <a>
-      <h1 class="menu" (click)="fadeLeft()">Stories</h1>
-    </a>
-    <a routerLink="about">
-      <h1 class="menu" (click)="fadeLeft()">About</h1>
-    </a>
-  </nav>
+  <a routerLink=""><h1>Lantern Dragon Works</h1></a>
+
+  <div class ="main-menu">
+    <nav>
+      <a>
+        <h1 class="menu">Stories</h1>
+      </a>
+      <a routerLink="/about">
+        <h1 class="menu">About</h1>
+      </a>
+    </nav>
+  </div>
+
 </div>
