added stories component. Fixed typos

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,7 +1,3 @@
-<nav>
-  <a>About</a>
-</nav>
-
 <app-home></app-home>
 
 <div>
@@ -10,7 +6,7 @@
 
       Lantern Dragon Works is a small collection fictional of novels inspired by Japanese visual novels and themes.
 
-      All credit for creation, storywriting, and characters go to the sole author, deltaOG (long may he live).
+      All credit for creation, story-writing, and characters go to the sole author, deltaOG (long may he live).
 
       For now, this website is still in its infancy, as are my development skills. Therefore, if you
       would like a more complete experience, on a more worthy interface, please visit this <a href="https://lanterndragonworks.wordpress.com/">WordPress page</a> for now.
