--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,5 @@
-<div>
 
-  <a routerLink=""><h1>Lantern Dragon Works</h1></a>
+  <a routerLink=""><h1 id="title">Lantern Dragon Works</h1></a>
 
   <div class ="main-menu">
     <nav>
@@ -9,4 +8,3 @@
     </nav>
   </div>
 
-</div>
