--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,6 +1,19 @@
+
 p {
   float: left;
   white-space: pre;
   width: 1200px;
   font-size: 1.5em;
+  background-color: rgba(0,0,0,0.7);
+  margin-left: 10px;
+}
+
+a {
+  text-decoration: none;
+  color: #b0cdd9;
+}
+
+a:hover {
+  color: #83c1d9;
+  text-decoration: underline;
 }
