--- a/src/styles.css
+++ b/src/styles.css
@@ -1,14 +1,25 @@
-body::after {
-  content: "";
-  display: block;
-  position: absolute;
-  z-index: -1;
-  width: 100%;
-  height: 100%;
-  background: url('assets/Main-bg.jpg') no-repeat center center;
-  opacity: 0.6;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
+/*body::after {*/
+  /*content: "";*/
+  /*display: block;*/
+  /*position: absolute;*/
+  /*z-index: -1;*/
+  /*width: 100%;*/
+  /*height: 100%;*/
+  /*background: url('assets/lantern-bg.JPG') no-repeat center center;*/
+  /*opacity: 0.6;*/
+  /*top: 0;*/
+  /*left: 0;*/
+  /*bottom: 0;*/
+  /*right: 0;*/
+/*}*/
+
+body {
+  background: url('assets/bgimgs/night-lantern-illustration-temple-lanterns-dragon-382880-pxhere.com.jpg') no-repeat center center fixed;
+  background-size: cover;
+  color: white;
 }
+
+a {
+  text-decoration: none;
+}
+
