--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,7 +1,7 @@
 <app-home></app-home>
 
-<div>
-    <p class="">
+<div id="container">
+    <p>
       Welcome.
 
       Lantern Dragon Works is a small collection fictional of novels inspired by Japanese visual novels and themes.
