--- a/src/app/stories/stories.component.html
+++ b/src/app/stories/stories.component.html
@@ -1,3 +1,5 @@
 <app-home></app-home>
 
-<p>Content me with content</p>
+<div class="container">
+  <p class="text-block">So sorry, turns out theres nothing here yet.</p>
+</div>
