--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,5 +1,3 @@
-
-
 h1 {
   font-family: Merienda;
   font-weight: 400;
@@ -41,4 +39,5 @@ a {
 
 #title {
   font-size: 8em;
+  white-space: nowrap;
 }
