--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm bg-light navbar-light fixed-bottom">
+<nav class="navbar navbar-expand-sm fixed-bottom">
   <ul class="navbar-nav">
     <li class="nav-item active">
       <a class="nav-link" href="#">Active</a>
