--- a/src/styles.css
+++ b/src/styles.css
@@ -15,7 +15,7 @@
 
 body {
   background: url('assets/bgimgs/night-lantern-illustration-temple-lanterns-dragon-382880-pxhere.com.jpg') no-repeat center center fixed;
-  background-size: cover;
+  background-size: 4156px;
   color: white;
 }
 
