--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,43 +1,42 @@
-h1 {
-  font-family: Merienda;
-  font-weight: 400;
-  color: #83c1d9;
-  user-select: none;
-  text-shadow: 1px 1px #2a4353;
-}
-
-a {
-  text-decoration: none;
-}
-
-.menu {
-  margin: 20px;
-  padding-left: 10px;
-  font-size: 4em;
-  width: 400px;
-  background: rgba(169, 169, 236, 0.2);
-}
-
-.main-menu nav{
-  margin-top: 50px;
-  width: fit-content;
-  list-style-type: none;
-  white-space: nowrap;
+[class*='col-'] {
   float: left;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  height: 100%;
-  background-color: rgba(0,0,0,0.7);
-  min-height: 100vh;
-}
-
-.menu:hover, .active {
-  color: #ff362e;
-  padding-left: 15px;
-  margin-right: 15px;
+  padding: 20px 20px 0;
+  width: inherit;
 }
 
 #title {
-  font-size: 8em;
+  font-size: 6em;
   white-space: nowrap;
+}
+
+#container {
+  font-family: Merienda;
+  color: #80c6d9;
+  user-select: none;
+}
+
+#main-menu {
+  background: rgba(0,0,0,0.7);
+  width: 400px;
+  height: 800px;
+  float: left;
+}
+
+.menu {
+  text-align: center;
+  font-size: 4em;
+  max-height: 120px;
+  min-width:120px;
+  background-color: rgba(105, 156, 168, 0.4);
+  border-radius: 5px;
+}
+
+.menu:hover, .active {
+  color: #ff2f3b;
+  font-weight: bold;
+}
+
+a {
+  text-decoration: inherit;
+  color: inherit;
 }
