--- a/src/styles.css
+++ b/src/styles.css
@@ -17,6 +17,7 @@ body {
   background: url('assets/bgimgs/night-lantern-illustration-temple-lanterns-dragon-382880-pxhere.com.jpg') no-repeat center center fixed;
   background-size: cover;
   color: white;
+  overflow: hidden;
 }
 
 a {
