--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,10 +1,6 @@
 p {
-  float: left;
   white-space: pre;
-  width: 1200px;
   font-size: 1.5em;
-  background-color: rgba(0,0,0,0.7);
-  margin-left: 10px;
 }
 
 a {
@@ -18,6 +14,8 @@ a:hover {
 }
 
 #container {
-  white-space: nowrap;
-  overflow: hidden;
+  width: 1200px;
+  background-color: rgba(0,0,0,0.7);
+  margin-left: 10px;
+  display: block;
 }
