--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,16 +1,8 @@
 <nav class="navbar navbar-expand-sm fixed-bottom">
-  <ul class="navbar-nav">
-    <li class="nav-item active">
-      <a class="nav-link" href="#">Active</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Link</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Link</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link disabled" href="#">Disabled</a>
-    </li>
-  </ul>
+
+  <a *ngFor="let section of sections" routerLink="/{{section}}">
+    <div class="nav-item">
+      <span class="nav-link">{{section}}</span>
+    </div>
+  </a>
 </nav>
