improved aboout wrapping

--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,5 +1,5 @@
 p {
-  white-space: pre-wrap;
+  white-space: pre-line;
   font-size: 1.5em;
 }
 
@@ -16,6 +16,7 @@ a:hover {
 #container {
   background-color: rgba(0,0,0,0.7);
   margin-left: 10px;
+  padding-left: 2.5%;
   display: inline-block;
   position: absolute;
   overflow-wrap: break-spaces;
