--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<main>
+  <div class="bg">
+    <app-navbar></app-navbar>
+    <router-outlet></router-outlet>
+  </div>
+</main>
