--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,3 @@
-<app-home [selected]="'about'"></app-home>
-
 <div id="container">
     <p>
       Welcome.
@@ -17,3 +15,5 @@
       A lowly member of the Lantern Dragons Works team.
     </p>
 </div>
+
+<app-navbar [selected]="'about'"></app-navbar>
