--- a/src/app/stories/stories.component.html
+++ b/src/app/stories/stories.component.html
@@ -1,5 +1,4 @@
-<app-home [selected]="'stories'"></app-home>
-
 <div class="container">
-  <p class="text-block">So sorry, turns out there's nothing here yet.</p>
 </div>
+
+<app-navbar [selected]="'stories'"></app-navbar>
