--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,6 +1,12 @@
 p {
+  background-color: rgba(0,0,0,0.7);
+  border-radius: 25px;
+  padding: 0 20px 30px;
+  color: #FFFFFF;
   white-space: pre-line;
   font-size: 1.5em;
+  text-align: center;
+  overflow-wrap: break-spaces;
 }
 
 a {
@@ -14,10 +20,10 @@ a:hover {
 }
 
 #container {
-  background-color: rgba(0,0,0,0.7);
-  margin-left: 10px;
-  padding-left: 2.5%;
-  display: inline-block;
-  position: absolute;
-  overflow-wrap: break-spaces;
+  position: fixed;
+  width: 70%;
+  margin-left: 15%;
+  margin-right: 15%;
+  top: 10%;
+  height: 60%;
 }
