--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,7 +2,7 @@
     <p>
       Welcome.
 
-      Lantern Dragon Works is a small collection fictional of novels inspired by Japanese visual novels and themes.
+      Lantern Dragon Works is a small collection of fictional novels inspired by Japanese visual novels and themes.
 
       All credit for creation, story-writing, and characters go to the sole author, deltaOG (long may he live).
 
