fixed bug in navbar items

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,9 +1,7 @@
 <nav id="navbar">
 
-    <a *ngFor="let section of sections" routerLink="/{{section}}">
-      <div class="nav-item">
+    <a *ngFor="let section of sections" routerLink="/{{section}}" class="nav-item">
         <span class="nav-link" (click)="select(section)" [ngClass]="{'active': section === selected}">{{section}}</span>
-      </div>
     </a>
 
 </nav>
