--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -4,11 +4,18 @@
   -ms-user-select: none;
   user-select: none;
   width: 100%;
+  height: 150px;
   text-align: center;
   position: fixed;
-  background: transparent;
   bottom: 50px;
   white-space: nowrap;
+}
+
+.gradient {
+  background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.98) 49%, rgba(0,0,0,1) 50%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.98) 49%,rgba(0,0,0,1) 50%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.98) 49%,rgba(0,0,0,1) 50%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
 }
 
 .nav-link {
@@ -31,6 +38,7 @@
   display: inline-block;
   text-decoration: none;
   width: 250px;
+  padding: 30px 0;
   margin-left: 25px;
   margin-right: 25px;
 }
