--- a/src/app/stories/stories.component.css
+++ b/src/app/stories/stories.component.css
@@ -1,4 +1,5 @@
 .story-box {
+  display: block;
   width: 70%;
   height: 70%;
   position: fixed;
@@ -7,14 +8,28 @@
   border: #e3af5d solid;
   -webkit-border-radius: 25px;
   -moz-border-radius: 25px;
-  border-radius: 25px;
+  border-radius: 10px;
   mso-border-shadow: yes;
-  background-color: rgba(0,0,0,0.7);
-  overflow: scroll;
+  box-sizing: border-box;
+  background: rgba(0,0,0,0.7);
+  background-clip: content-box;
+  overflow-y: auto;
 }
 
 .story-box::-webkit-scrollbar {
-  display: none;
+  width: 10px;
+  padding-top: 10px;
+}
+
+.story-box::-webkit-scrollbar-track {
+  border-radius: 25px;
+  box-shadow: inset 0 0 5px grey;
+  background-color: black;
+}
+
+.story-box::-webkit-scrollbar-thumb {
+   background: #464646;
+  border-radius: 25px;
 }
 
 .story-text {
