--- a/src/app/extras/extras.component.html
+++ b/src/app/extras/extras.component.html
@@ -4,7 +4,7 @@
   <form>
     <input type="text" id="name" class="comment-box name" placeholder="name (optional)" maxlength="25" autocomplete="off"><br>
     <textarea id="comment" class="comment-box comment" placeholder="500 characters max" maxlength="500"></textarea><br>
-    <button (click)="submitComment()">Submit</button>
+    <button id="submit" (click)="submitComment()">Submit</button>
   </form>
 
 </div>
