--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,5 +1,7 @@
-<div class="container">
-
+<div [ngGrid]="{'max_rows': 3, 'draggable': false, 'auto_resize': true}">
+  <div class="character" *ngFor="let img of mockImgs" [ngGridItem]>
+    <img style="width:100%; object-fit: fill" src="{{img}}">
+  </div>
 </div>
 
 <app-navbar [selected]="'gallery'"></app-navbar>
