installed express. Refactored directories

--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -1,4 +1,4 @@
-@import url('../shared/styles/text-box.css');
+@import url('../../shared/styles/text-box.css');
 
 .text-box {
   height: fit-content;
