--- a/src/app/components/stories/stories.component.html
+++ b/src/app/components/stories/stories.component.html
@@ -1,5 +1,8 @@
 <div class="text-box">
   <button (click)="getStory()">Test, Dragon's Revolt Part 1</button>
+  <div class="story">
+    <img class="cover" src="../../../assets/imgs/Site%20Art/DragonRevoltCover.jpg">
+  </div>
   <div *ngIf="pages" class="story-text">
     <ul *ngFor="let page of pages">
       {{page}}
