--- a/src/app/components/comments/comments.component.html
+++ b/src/app/components/comments/comments.component.html
@@ -1,10 +1,18 @@
 <div class="text-box">
   <h3>Prototype comments</h3>
 
-  <form>
-    <input type="text" id="name" class="comment-box name" placeholder="name (optional)" maxlength="25" autocomplete="off"><br>
-    <textarea id="comment" class="comment-box comment" placeholder="500 characters max" maxlength="500"></textarea><br>
-    <button id="submit" (click)="submitComment()">Submit</button>
-  </form>
+  <!--<form>-->
+    <input type="text" #name class="comment-box name" placeholder="name (optional)" maxlength="25" autocomplete="off"><br>
+    <textarea #content class="comment-box comment" placeholder="500 characters max" maxlength="500"></textarea><br>
+    <button (click)="submitComment(name, content)">Submit</button>
+  <!--</form>-->
+
+  <div *ngIf="commentService.comments[page].length">
+    <div class="comment-box" *ngFor="let comment of commentService.comments[page]">
+      <p>{{comment.name}}</p>
+      <p>{{comment.content}}</p>
+      <p>{{comment.date}}</p>
+    </div>
+  </div>
 
 </div>
