--- a/src/app/shared/styles/text-box.css
+++ b/src/app/shared/styles/text-box.css
@@ -15,3 +15,19 @@
   background-clip: content-box;
   overflow-y: auto;
 }
+
+.text-box::-webkit-scrollbar {
+  width: 10px;
+  padding-top: 10px;
+}
+
+.text-box::-webkit-scrollbar-track {
+  border-radius: 25px;
+  box-shadow: inset 0 0 5px grey;
+  background-color: black;
+}
+
+.text-box::-webkit-scrollbar-thumb {
+  border-radius: 25px;
+  background-color: rgb(212, 166, 68);
+}
