fixed zhuyu link. fixed comments position.

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,5 +7,5 @@
 </nav>
 
 <div class="sprite">
-  <img src="/assets/imgs/Volume%201%20Art/Characters/zhuyuSprite.png">
+  <img src="./assets/imgs/Volume%201%20Art/Characters/zhuyuSprite.png">
 </div>
