--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,4 +8,5 @@
 
 <div class="sprite">
   <img src="./assets/imgs/Volume%201%20Art/Characters/zhuyuSprite.png">
+  <button class="btn-dark" (click)='dark($event)'>Dark</button>
 </div>
