--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
-<main>
-  <div class="bg">
-    <router-outlet></router-outlet>
-  </div>
+<main class="sitebg">
+  <app-navbar (changeBG)="dark(true)"></app-navbar>
 </main>
