--- a/src/app/components/gallery/gallery.component.html
+++ b/src/app/components/gallery/gallery.component.html
@@ -1,18 +1,11 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-3 col-sm-4" *ngFor="let img of mockImgs; let index = index">
+    <div class="col-md-3 col-sm-6" *ngFor="let img of mockImgs; let index = index">
       <div *ngIf="index <= 3" class="img-thumbnail">
-        <img class="gallery" src="{{img}}">
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-3 col-sm-4" *ngFor="let img of mockImgs; let index = index">
-      <div *ngIf="index <= 7 && index > 3" class="img-thumbnail">
-        <img class="gallery" src="{{img}}">
+        <img class="portrait" src="{{img}}">
       </div>
     </div>
   </div>
 </div>
 
-<app-navbar [selected]="'gallery'"></app-navbar>
+<!--<app-navbar [selected]="'gallery'"></app-navbar>-->
