--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav id="navbar" class="gradient">
 
-    <a *ngFor="let section of sections" routerLink="/{{section}}" class="nav-item">
-        <span class="nav-link" (click)="select(section)" [ngClass]="{'active': section === selected}">{{section}}</span>
+    <a *ngFor="let section of sections" routerLink="/{{section}}" class="nav-item nav-link" routerLinkActive="active">
+      {{section}}
     </a>
 
 </nav>
