Connected comments service with node.js server. CommentsComponent now subscribes to updates on CommentService.

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,20 +1,18 @@
-<!--<div class="text-box">-->
-    <!--<p>-->
-      <!--Welcome.-->
+<div class="text-box">
+    <p>
+      Welcome.
 
-      <!--Lantern Dragon Works is a small collection of fictional novels inspired by Japanese visual novels and themes.-->
+      Lantern Dragon Works is a small collection of fictional novels inspired by Japanese visual novels and themes.
 
-      <!--All credit for creation, story-writing, and characters go to the sole author, deltaOG (long may he live).-->
+      All credit for creation, story-writing, and characters go to the sole author, deltaOG (long may he live).
 
-      <!--For now, this website is still in its infancy, as are my development skills. Therefore, if you-->
-      <!--would like a more complete experience, on a more worthy interface, please visit this <a href="https://lanterndragonworks.wordpress.com/">WordPress page</a> for now.-->
-      <!--Though be sure to come back and visit again when this project becomes awesome.-->
+      For now, this website is still in its infancy, as are my development skills. Therefore, if you
+      would like a more complete experience, on a more worthy interface, please visit this <a href="https://lanterndragonworks.wordpress.com/">WordPress page</a> for now.
+      Though be sure to come back and visit again when this project becomes awesome.
 
-      <!--Regards, and enjoy your stay,-->
+      Regards, and enjoy your stay,
 
-      <!--A lowly member of the Lantern Dragons Works team.-->
-    <!--</p>-->
-<!--</div>-->
+      A lowly member of the Lantern Dragons Works team.
+    </p>
+</div>
 
-
-<!--&lt;!&ndash;<app-navbar [selected]="'about'"></app-navbar>&ndash;&gt;-->
