--- a/src/app/components/comments/comments.component.html
+++ b/src/app/components/comments/comments.component.html
@@ -7,8 +7,8 @@
       <textarea #content class="comment-box commentInput" placeholder="500 characters max" maxlength="500"></textarea><br>
       <button class="btn" (click)="submitComment(name, content)">Submit</button>
     </div>
-    <div *ngIf="commentService.comments[page].length">
-      <div class="comment-box comment" *ngFor="let comment of commentService.comments[page]">
+    <div *ngIf="comments">
+      <div class="comment-box comment" *ngFor="let comment of comments">
         <p>{{comment.name}}</p>
         <p>{{comment.content}}</p>
         <p>{{comment.date}}</p>
