--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -25,7 +25,7 @@
   color: #308cd7;
   font-family: Merienda, sans-serif;
   text-shadow: 0 0 2px #3e70b0;
-  line-height: 1em;
+  line-height: 100px;
 }
 
 .nav-link:hover, .active {
@@ -38,7 +38,6 @@
   display: inline-block;
   text-decoration: none;
   width: 250px;
-  padding: 30px 0;
   margin-left: 25px;
   margin-right: 25px;
 }
