--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,18 +1,19 @@
 <div class="text-box">
-    <p>
-      Welcome.
+  <pre>
 
-      Lantern Dragon Works is a small collection of fictional novels inspired by Japanese visual novels and themes.
+    Welcome.
 
-      All credit for creation, story-writing, and characters go to the sole author, deltaOG (long may he live).
+    Lantern Dragon Works is a small collection of fictional novels inspired by Japanese visual novels and themes.
 
-      For now, this website is still in its infancy, as are my development skills. Therefore, if you
-      would like a more complete experience, on a more worthy interface, please visit this <a href="https://lanterndragonworks.wordpress.com/">WordPress page</a> for now.
-      Though be sure to come back and visit again when this project becomes awesome.
+    All credit for creation, story-writing, and characters go to the sole author, DeltaOG (long may he live).
 
-      Regards, and enjoy your stay,
+    For now, this website is still in its infancy, as are my development. Therefore, if you
+    would like a more complete experience, on a more worthy interface, please visit our <a href="https://lanterndragonworks.wordpress.com/">WordPress Page</a>.
+    Though be sure to come back and visit again when this project becomes awesome.
 
-      A lowly member of the Lantern Dragons Works team.
-    </p>
+    Regards, and enjoy your stay,
+
+    A lowly member of the Lantern Dragons Works team.
+  </pre>
 </div>
 
