--- a/src/app/components/comments/comments.component.html
+++ b/src/app/components/comments/comments.component.html
@@ -1,20 +1,31 @@
 <div class="text-box">
   <h3>Prototype comments</h3>
-  <!--<form>-->
+
   <div class="container">
-    <div class="form-group">
-      <input type="text" #name class="comment-box name" placeholder="name (optional)" maxlength="25" autocomplete="off"><br>
-      <textarea #content class="comment-box commentInput" placeholder="500 characters max" maxlength="500"></textarea><br>
-      <button class="btn" (click)="submitComment(name, content)">Submit</button>
-    </div>
+    <form method="POST" #commentForm="ngForm" (submit)="submitComment(commentForm)">
+      <div class="form-group">
+        <input name="user" type="text"
+               class="comment-box name"
+               placeholder="name (optional)" maxlength="25" autocomplete="off"
+               ngModel>
+        <br>
+        <textarea name="content"
+                  class="comment-box commentInput"
+                  placeholder="500 characters max" maxlength="500"
+                  ngModel
+                  required></textarea>
+        <br>
+        <button type="submit" class="btn">Submit</button>
+      </div>
+    </form>
     <div *ngIf="comments">
       <div class="comment-box comment" *ngFor="let comment of comments">
-        <p>{{comment.name}}</p>
+        <p>{{comment.user}}</p>
         <p>{{comment.content}}</p>
         <p>{{comment.date}}</p>
       </div>
     </div>
   </div>
-  <!--</form>-->
+
 
 </div>
