--- a/src/app/components/comments/comments.component.html
+++ b/src/app/components/comments/comments.component.html
@@ -2,21 +2,17 @@
   <h3>Prototype comments</h3>
 
   <div class="container">
-    <form method="POST" #commentForm="ngForm" (submit)="submitComment(commentForm)">
-      <div class="form-group">
-        <input name="user" type="text"
+    <form>
+        <input #user type="text"
                class="comment-box name"
-               placeholder="name (optional)" maxlength="25" autocomplete="off"
-               ngModel>
+               placeholder="name (optional)" maxlength="25" autocomplete="off">
         <br>
-        <textarea name="content"
+        <textarea #content
                   class="comment-box commentInput"
                   placeholder="500 characters max" maxlength="500"
-                  ngModel
                   required></textarea>
         <br>
         <button type="submit" class="btn">Submit</button>
-      </div>
     </form>
     <div *ngIf="comments">
       <div class="comment-box comment" *ngFor="let comment of comments">
