--- a/src/app/components/comments/comments.component.html
+++ b/src/app/components/comments/comments.component.html
@@ -20,6 +20,9 @@
     </mat-card>
     <div *ngIf="comments">
       <div class="comment-box comment" *ngFor="let comment of comments">
+        <div class="options">
+          <i class="fa fa-trash-o" (click)="deleteComment(comment.id)"></i>
+        </div>
         <p>{{comment.user}}</p>
         <p>{{comment.content}}</p>
         <p>{{comment.date}}</p>
