Story component accesses param route data. Template uses innerHtml directive to display html

--- a/src/app/components/story/story.component.html
+++ b/src/app/components/story/story.component.html
@@ -1,1 +1,7 @@
 <p>Dragons Revolution will go here.</p>
+
+<button (click)="getStory()">getStory</button>
+
+<div *ngIf="htmlText">
+  <div class="text-box" [innerHtml]="htmlText"></div>
+</div>
