--- a/src/app/components/comments/comments.component.html
+++ b/src/app/components/comments/comments.component.html
@@ -3,17 +3,18 @@
 
   <div class="container">
     <mat-card>
-      <form #commentForm="ngForm" (ngSubmit)="submitComment(commentForm)">
+      <form [formGroup]="form" (ngSubmit)="submitComment()">
             <input name="user" type="text" matInput
+                   formControlName="user"
                    class="comment-box name"
-                   placeholder="name (optional)" maxlength="25" autocomplete="off"
-                   ngModel>
+                   placeholder="name (optional)" autocomplete="off"
+                   >
         <br>
             <textarea name="content" matInput
+                      formControlName="content"
                       class="comment-box commentInput"
-                      placeholder="500 characters max" maxlength="500"
-                      required
-                      ngModel></textarea>
+                      placeholder="500"
+                      ></textarea>
             <br>
             <button type="submit" class="btn">Submit</button>
       </form>
