--- a/src/app/components/story/story.component.html
+++ b/src/app/components/story/story.component.html
@@ -5,3 +5,9 @@
 <div *ngIf="htmlText">
   <div class="text-box" [innerHtml]="htmlText"></div>
 </div>
+<form formGroup="file">
+  <div>
+    <button mat-button tupe="button" (click)="filePick.click()">Upload content</button>
+    <input type="file" #filePick>
+  </div>
+</form>
