fixed placeholder for comment text box

--- a/src/app/components/comments/comments.component.html
+++ b/src/app/components/comments/comments.component.html
@@ -13,7 +13,7 @@
             <textarea name="content" matInput
                       formControlName="content"
                       class="comment-box commentInput"
-                      placeholder="500"
+                      placeholder="500 characters max"
                       ></textarea>
             <br>
             <button type="submit" class="btn">Submit</button>
