--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -4,11 +4,11 @@
   -ms-user-select: none;
   user-select: none;
   width: 100%;
-  height: 150px;
   text-align: center;
-  position: fixed;
-  bottom: 10px;
+  position: absolute;
+  bottom: 0;
   white-space: nowrap;
+  overflow: hidden;
 }
 
 .gradient {
@@ -25,7 +25,7 @@
   color: #308cd7;
   font-family: Merienda, sans-serif;
   text-shadow: 0 0 2px #3e70b0;
-  line-height: 100px;
+  padding: 0;
 }
 
 .nav-link:hover, .active {
@@ -38,8 +38,7 @@
   display: inline-block;
   text-decoration: none;
   width: 250px;
-  margin-left: 25px;
-  margin-right: 25px;
+  margin: 0 25px 0;
 }
 
 .sprite {
@@ -48,13 +47,34 @@
   right: 30px;
   bottom: -4px;
   z-index: 101;
+  width: 10%;
 }
 
 .sprite img {
-  height: 300px;
+  width: 100%;
 }
 
 #id {
   width: 50px;
   display: block;
+}
+
+.closed {
+  height: 50px;
+  transition: ease-in-out 0.5s;
+}
+
+.open {
+  height: 140px;
+  transition: ease-in-out 0.5s;
+}
+
+.fa {
+  font-size: 3em;
+  padding: 5px;
+}
+
+#collapse {
+  margin: 0;
+  height: 2.4em;
 }
