Removed unnecessary argument for toggle dark method

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,7 +12,7 @@
 
 <div class="sprite">
   <img src="./assets/imgs/Volume%201%20Art/Characters/zhuyuSprite.png">
-  <button id=theme [ngClass]="{'btn-light' : theme === 'Light', 'btn-dark' : theme === 'Dark'}" (click)='dark($event)'>{{theme}}</button>
+  <button id=theme [ngClass]="{'btn-light' : theme === 'Light', 'btn-dark' : theme === 'Dark'}" (click)='dark()'>{{theme}}</button>
 </div>
 
 
