--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -7,7 +7,7 @@
 
     All credit for creation, story-writing, and characters go to the sole author, DeltaOG (long may he live).
 
-    For now, this website is still in its infancy, as are my development. Therefore, if you
+    For now, this website is still in its infancy, as are my development skills. Therefore, if you
     would like a more complete experience, on a more worthy interface, please visit our <a href="https://lanterndragonworks.wordpress.com/">WordPress Page</a>.
     Though be sure to come back and visit again when this project becomes awesome.
 
