--- a/src/app/components/gallery/gallery.component.html
+++ b/src/app/components/gallery/gallery.component.html
@@ -1,14 +1,4 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-3 col-sm-6" *ngFor="let img of mockImgs; let index = index">
-      <div *ngIf="index <= 3" class="img-thumbnail">
-        <img class="portrait" src="{{img}}">
-      </div>
-    </div>
-  </div>
-</div>
 
-<app-bio>
 
-</app-bio>
+<app-bio></app-bio>
 <!--<app-navbar [selected]="'gallery'"></app-navbar>-->
