--- a/src/app/components/gallery/gallery.component.css
+++ b/src/app/components/gallery/gallery.component.css
@@ -5,18 +5,28 @@
   margin: 0 8%;
 }
 
-.row {
-  position: relative;
-  top: 50px;
-  margin-bottom: 50px;
-}
-
-.img-thumbnail {
-  background-color: orange;
-  margin: 0 2%;
-}
-
 .portrait {
   width: 100%;
   padding: 6px;
+}
+
+.bio {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+.selectionColumn{
+  display: inline-block;
+  float: left;
+}
+
+.selector {
+  margin: 20px 0;
+  cursor: pointer;
+}
+
+.selector:hover {
+  color: rgba(255, 156, 13, 0.76);
 }
