--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <main [ngClass]="{'bgLight' : isDark === false, 'bgDark' : isDark}">
-  <router-outlet></router-outlet>
   <app-navbar (changeBG)="toggleDark()"></app-navbar>
+  <router-outlet></router-outlet>
+  <footer></footer>
 </main>
