--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -5,10 +5,9 @@
   user-select: none;
   width: 100%;
   text-align: center;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   white-space: nowrap;
-  overflow: hidden;
 }
 
 .gradient {
