Added Zhuyu Age

--- a/src/app/components/comments/comments.component.html
+++ b/src/app/components/comments/comments.component.html
@@ -2,7 +2,7 @@
   <h3>Prototype comments</h3>
 
   <div class="container">
-    <mat-card>
+    <mat-card class="comment-box">
       <form [formGroup]="form" (ngSubmit)="submitComment()">
             <input name="user" type="text" matInput
                    formControlName="user"
