Miscellaneous changes to story ui (scrollbar, chapter buttons). Added scaling to gallery bios. Added all chapters for Masks. Started section for credits

--- a/src/app/components/gallery/gallery.component.css
+++ b/src/app/components/gallery/gallery.component.css
@@ -1,18 +1,9 @@
-.container {
-  background: none;
-  width: 84%;
-  max-width: none;
-  margin: 0 8%;
-}
-
-.portrait {
-  width: 100%;
-  padding: 6px;
-}
-
 .bio {
   position: absolute;
-  left: 200px;
+  left: 150px;
+  height: 80%;
+  width: auto;
+  margin-right: 5%;
 }
 
 .selectionColumn{
